force-app/main/default/objects/Contact/fields/B2B_Customer_Service_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_Customer_Service_Telephone_Number__c</fullName>
    <description>This field store the value of the telephone number of the customer service.</description>
    <formula>Account.B2B_Customer_Service_Telephone_Number__c</formula>
    <label>B2B Customer Service Telephone Number</label>
    <type>Text</type>
</CustomField>