force-app/main/default/objects/Contact/fields/B2B_Enabled_for_Partner_Portal__c.field-meta.xml
<CustomField>
    <fullName>B2B_Enabled_for_Partner_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify whether the contact is Enabled for Portal</description>
    <label>Enabled for Partner Portal</label>
    <type>Checkbox</type>
</CustomField>