force-app/main/default/objects/Contact/fields/B2C_Brand_Interest__c.field-meta.xml
<CustomField>
    <fullName>B2C_Brand_Interest__c</fullName>
    <label>B2C Brand Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silhouette</fullName>
            </value>
            <value>
                <fullName>evil eye</fullName>
            </value>
            <value>
                <fullName>Neubau</fullName>
            </value>
            <value>
                <fullName>SVS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>