force-app/main/default/objects/Contact/fields/k_Brand__c.field-meta.xml
<CustomField>
    <fullName>k_Brand__c</fullName>
    <label>Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silhouette</fullName>
                <label>SH</label>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>SVS</fullName>
            </value>
            <value>
                <fullName>neubau</fullName>
                <label>NB</label>
            </value>
            <value>
                <fullName>adidas</fullName>
                <isActive>false</isActive>
                <label>adidas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>